--- a/DjangoProject/DjangoWebSite/templates/hello.html
+++ b/DjangoProject/DjangoWebSite/templates/hello.html
@@ -1,22 +1,10 @@
-﻿<!--{% load static %}
+﻿{% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
--->
+
 <!DOCTYPE html>
 
 <html>
 	<head>
-		<style>
-			h1 {
-			  color: blue;
-			  font-family: verdana;
-			  font-size: 300%;
-			}
-			p {
-			  color: red;
-			  font-family: courier;
-			  font-size: 160%;
-			}
-			</style>
 		<title>
 			{{ title }}
 		</title>
