--- a/DjangoProject/DjangoWebSite/templates/blog.html
+++ b/DjangoProject/DjangoWebSite/templates/blog.html
@@ -1,5 +1,5 @@
 ﻿{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/hangman/styles.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/blog/styles.css' %}">
 
 <!DOCTYPE html>
 
